apps/kratos/components/tls/patch-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kratos
spec:
  ports:
    - name: https
      targetPort: http
    - name: https
      targetPort: http-admin
